--- a/lab worksheet 3/1.html
+++ b/lab worksheet 3/1.html
@@ -1,27 +1,27 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="1.js"></script>
+    <link rel="stylesheet" href="style.css">
+    
+<title>CA5314 : Full Stack Laboratory </title>
 </head>
 <body>
-    <h1>Order form</h1>
-    <form>
-        <label for="city">Select your city: </label>
-        <select name="city" id="city">
-            <option value="Chennai">Chennai</option>
-            <option value="Coimbatore">Coimbatore</option>
-            <option value="Madurai">Madurai</option>
-            <option value="Salem">Salem</option>
-            <option value="Trichy">Trichy</option>
-            <option value="Thoothukudi">Thoothukudi</option>
-
-        </select>
-        <button type="button" onclick="order()">Submit</button>
-    </form>
-    <div id="myform"></div>
-</body>
+<div class="wrapper">
+<h1>Code Challenge 2023</h1>
+<h2 id="d1">a</h2>
+<h2 id="d2"></h2>
+ <h2>MCA Association</h2>
+ <ul>
+ <li class="complete">AI & Generative AI</li>
+ <li class="complete">CX & Digital Experience</li>
+ <li class="complete">Code Automation</li>
+ <li class="ongoing">Connected Product and Services</li>
+ <li class="ongoing">Data World and Cloud Computing</li>
+ <li class="upcoming">Quantum Computing</li>
+ <li class="upcoming">Robotics and Quality Engineering</li>
+ </ul>
+ </div>
+ <script src="a.js"></script>
+ </body>
 </html>
